--- a/BlogPost/Views/Home/Index.cshtml
+++ b/BlogPost/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<BlogPost.Models.Post>
 
 @{
-    ViewData["Title"] = "GetAllPost";
+    ViewData["Title"] = "Index";
 }
 
 <h1>GetAllPost</h1>
