--- a/BlogPost/Areas/Users/Views/Posts/Index.cshtml
+++ b/BlogPost/Areas/Users/Views/Posts/Index.cshtml
@@ -3,14 +3,15 @@
 @{
     ViewData["Title"] = "Index";
 }
-@*
-*@
+
+<h1>Index</h1>
+
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
@@ -27,9 +28,6 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
@@ -38,6 +36,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.DateCreated)
             </td>
-        </tr>}
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+}
     </tbody>
 </table>
