--- a/BlogPost/Views/Shared/_Layout.cshtml
+++ b/BlogPost/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="Index">Posts</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Users" asp-controller="Posts" asp-action="Index">User Posts</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
