--- a/BlogPost/Areas/Users/Views/Posts/Index.cshtml
+++ b/BlogPost/Areas/Users/Views/Posts/Index.cshtml
@@ -11,7 +11,10 @@
 </p>
 <table class="table">
     <thead>
-        <tr>
+        <tr>    
+            <th>
+                @Html.DisplayNameFor(model => model.AuthorId)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
@@ -27,6 +30,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.AuthorId)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
