--- a/BlogPost/Areas/Admin/Views/Admin/Index.cshtml
+++ b/BlogPost/Areas/Admin/Views/Admin/Index.cshtml
@@ -27,6 +27,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Status)
             </th>
+            <th>
+
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -48,6 +51,9 @@
             </td>
             <td>
                  @Html.DisplayFor(modelItem => item.Status)    
+            </td>
+            <td>
+                  <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
             </td>
         </tr>
         }
