#12: Created Approve and Reject functions in jquery ajax. Once rejected status obtains status Rejected. Additionally added two views in admin area

--- a/BlogPost/Areas/Admin/Views/Admin/Reject.cshtml
+++ b/BlogPost/Areas/Admin/Views/Admin/Reject.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BlogPost.Models.Post
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Reject";
     Layout = "_AdminLayout";
     int bla = Model.Id;
 }
