--- a/BlogPost/Areas/Admin/Views/Admin/Approve.cshtml
+++ b/BlogPost/Areas/Admin/Views/Admin/Approve.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BlogPost.Models.Post
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Approve";
     Layout = "_AdminLayout";
     int bla = Model.Id;
 }
