#12: In Admin Area's renamed name of controller. Inside  PostsController Approve and Reject methods changed to return OK() . In Admin Area view folder uncessary create , edit , delete , Approve, Reject cshtml files deleted. And in Layout.cshtml file , PostsController in User Area also modified.

--- a/BlogPost/Views/Shared/_Layout.cshtml
+++ b/BlogPost/Views/Shared/_Layout.cshtml
@@ -7,10 +7,6 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/BlogPost.styles.css" asp-append-version="true" />
-     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
 </head>
 <body>
     <header>
@@ -32,7 +28,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="Index">Posts</a>
                         </li>
-                        @if (User.Identity.IsAuthenticated && (User.IsInRole("User")))
+                        @if ((User.IsInRole("User")))
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="Users" asp-controller="Posts" asp-action="Index">User Posts</a>
@@ -61,5 +57,9 @@
             &copy; 2022 - BlogPost - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
